# light-llm

./: .gitignore  EXPERIMENT_RESULTS.md  INTERVIEW.md  KV_CACHE_BENCHMARK_ANALYSIS.md  LICENSE  README.md  REWARD_MODEL_COMPLETION.md  pyproject.toml
experiments/: benchmark_kv.py  benchmark_kv_detailed.py  benchmark_memory.py  plot_lora.py  validate_reward_model.py
scripts/: demo_full_pipeline.py  demo_reward_model.py  demo_shakespeare.py  quick_rm_test.py  train_better_model.py  train_clean_model.py  train_raw_model.py
src/llm_scratch/data/: collators.py  formatting.py  tokenizers.py
src/llm_scratch/model/: base.py  layers.py  lora.py  reward.py  utils.py
src/llm_scratch/training/: policy.py  rl.py  rm.py  sft.py
tests/: test_lora.py  test_model.py  test_reward_model.py  test_rl.py
