[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_scratch"
version = "0.1.0"
description = "A clean, from-scratch implementation of an LLM with RLHF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "tqdm",
    "tikzplotlib",  # used in some visualization demos
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
